# THESIS

./: log.txt
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: atlas_moveit_config.pc  atlas_v3_moveit_config.pc  baxter_ikfast_left_arm_plugin.pc  baxter_ikfast_right_arm_plugin.pc  baxter_moveit_config.pc  clam_moveit_config.pc  gazebo_tutorials.pc  gztest_cog.pc  gztest_description.pc  gztest_gazebo.pc  iri_wam_moveit_config.pc  quadruped_control.pc  quadruped_description.pc  quadruped_gazebo.pc  quadruped_moveit_config.pc  quadruped_traj.pc  r2_moveit_generated.pc  rrbot_arm.pc  rrbot_control.pc  rrbot_description.pc  rrbot_gazebo.pc  rrbot_moveit_config.pc
devel/lib/quadruped_traj/: com  move  movement  movement_adj  movement_adj_step
devel/lib/rrbot_arm/: armswing
src/quadruped/quadruped_control/: CMakeLists.txt  package.xml
src/quadruped/quadruped_control/config/: quadruped.yaml~  quadruped_control.yaml~  quadruped_joint_control.yaml~
src/quadruped/quadruped_control/launch/: quadruped_control.launch  quadruped_control.launch~  quadruped_joint_control.launch  quadruped_joint_control.launch~
src/quadruped/quadruped_traj/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/quadruped/quadruped_traj/src/: com.cpp~  move.cpp  move.cpp~  movement.bac.cpp  movement.cpp  movement_adj.cpp  movement_adj.cpp~  movement_adj_step.cpp  movement_adj_step.cpp.bk  movement_adj_step.cpp~  robot_cog.cc  walk_config_step  walk_config_step~
src/rrbot_arm/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
(+78 files in other folders)
