<?xml version="1.0"?>
<package>
  <name>quadruped_control</name>
  <version>0.0.0</version>
  <description>The quadruped_control package</description>

  <maintainer email="ashisghosh@live.com">Ashis Ghosh</maintainer>

  <license>BSD</license>

  
  <author email="ashisghosh@live.com">Ashis Ghosh</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
